# URLJammer

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
common/: Cargo.toml
common/src/: lib.rs  settings.rs
server/: Cargo.toml
settings/: default.toml  development.toml
shortener/: Cargo.toml  README.md
shortener/src/: lib.rs  shortner.rs  slug_generator.rs
shortner/: Cargo.toml  README.md
shortner/src/: lib.rs  settings.rs  slug_generator.rs
storage/: Cargo.toml
storage/src/: aws_s3.rs  init.rs  lib.rs  local_fs.rs  settings.rs  types.rs
