[workspace]
members = ["common", "server", "shortner"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
server = { path = "server" }
shortner = { path = "shortner" }
common = { path = "common" }
#
# External dependencies
#
config = "0.14.0"
serde = "1.0.210"
lazy_static = "1.5.0"
