[workspace]
members = ["common", "server", "shortner", "storage"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
server = { path = "server" }
shortner = { path = "shortner" }
common = { path = "common" }
#
# External dependencies
#
config = "0.14.0"
serde = { version = "1.0.210", features = ["rc"] }
lazy_static = "1.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"
