[workspace]
members = ["common", "server", "shortener", "storage"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
server = { path = "server" }
shortner = { path = "shortener" }
common = { path = "common" }
storage = {path = "storage"}
#
# External dependencies
#
config = "0.14.0"
serde = { version = "1.0.210", features = ["rc"] }
lazy_static = "1.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.7.7"
